feat(cli): give checksum a keyed answer next to the plain digest
A digest answers "was this file changed". It does not answer "was it changed
by someone who does not hold the key", and the CLI had no way to ask that at
all.

checksum --hmac computes a keyed MAC, defaulting to HmacSHA256, with the key
read from standard input so it stays out of the process arguments.

The output now names which of the two questions it answered, in the shape
sha256sum uses: the value first, so it is still the first whitespace-separated
field and nothing that cuts it out breaks, followed by the algorithm and
whether the answer is keyed. The four known-answer digest tests keep asserting
the exact same vectors through that first field.

Two failures are kept apart because they call for different actions. A digest
name passed under --hmac says to drop --hmac rather than "unknown algorithm",
and a MAC that exists but cannot take a plain key says the key was rejected -
SunJCE answers "Missing password" for HmacPBESHA1 given a SecretKeySpec, which
is what the test for that path uses rather than a hypothetical.

The keyed answer is pinned to RFC 4231 test case 1, so it is a published vector
and not this implementation agreeing with itself.